apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__root_typename_with_defer-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 970
expression: stream.next_response().await.unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        0
      ]
    },
    {
      "data": {
        "name": "A"
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        1
      ]
    },
    {
      "data": {
        "name": null
      },
      "path": [
        "currentUser",
        "activeOrganization",
        "suborga",
        2
      ]
    }
  ]
}
