apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__root_typename_with_defer.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 968
expression: res
---
{
  "data": {
    "__typename": "Query",
    "currentUser": {
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1"
          },
          {
            "id": "2"
          },
          {
            "id": "3"
          }
        ]
      }
    }
  },
  "hasNext": true
}
