apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__subscription_callback_schema_reload.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1127
expression: res
---
{
  "data": null
}
