apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__subscription_with_callback-2.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1036
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "userWasCreated": {
      "name": "test",
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1",
            "name": "A"
          },
          {
            "id": "2",
            "name": "B"
          },
          {
            "id": "3",
            "name": "C"
          }
        ]
      }
    }
  }
}
