apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__subscription_with_callback-3.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1051
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "userWasCreated": null
  },
  "errors": [
    {
      "message": "cannot fetch the name",
      "extensions": {
        "code": "INVALID"
      }
    }
  ]
}
