apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__subscription_with_callback.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1034
expression: res
---
{
  "data": null
}
