apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__subscription_with_callback_with_limit-4.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1233
expression: res
---
{
  "data": null,
  "errors": [
    {
      "message": "can't open new subscription, limit reached",
      "extensions": {
        "code": "SUBSCRIPTION_MAX_LIMIT"
      }
    }
  ]
}
