apollo-router/src/services/supergraph/snapshots/uhg_custom_appollo_roouter__services__supergraph__tests__subscription_with_callback_with_limit.snap
---
source: apollo-router/src/services/supergraph/tests.rs
assertion_line: 1205
expression: res
---
{
  "data": null
}
